# iREAL

./: .gitlab-ci.yml  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  api.py  cli.py  docker-compose.yml  pyproject.toml
backend/app/engine/: transformers.py
backend/app/utils/: doc2md.sh  md2json.py  prepare_data.py
backend/data/0_raw/: prompt.txt
frontend/: .release-it.json  CHANGELOG.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/data/schools/: Barrington Aboriginal.md  Baryulgil Aboriginal.md  Bassendean Aboriginal Sch.md  Brungle Aboriginal School.md  Bulgandramine Aboriginal.md  Burnt Bridge Aboriginal.md  Cabbage Tree Island School.md  Carowra Tank Aboriginal.md  Condobolin Aboriginal.md  Cootamundra East Aboriginal School.md  Coraki Aboriginal School.md  Cubawee Aboriginal School.md  Dunoon Aboriginal School.md  Erambie Aboriginal.md  Euraba Aboriginal.md  Fattorini Aboriginal School.md  Forster Aboriginal School.md  Gingie Gingie Aboriginal.md  Jervis Bay Aboriginal.md  Kinchela Aboriginal.md  Long Gully Aboriginal.md  Maloga Aboriginal.md  Menindee Aboriginal.md  Morcom Aboriginal.md  Moree Aboriginal.md  Mount Olive Aboriginal.md  Mulyan Aboriginal.md  Mundoonan Aboriginal.md  Nanima (2) Aboriginal.md  New Angledool Aboriginal.md  Ngoorumba Aboriginal.md  Noocoorilma Aboriginal.md  Nowendoc Aboriginal.md  Nulla Nulla Aboriginal.md  Nymboida Aboriginal.md  Pelican Island Aboriginal.md  Pilliga Aboriginal.md  Pooncarie Aboriginal.md  Purfleet Aboriginal.md  Runnymede Aboriginal.md  (+9 more)
frontend/src/lib/: config.ts  nodes.ts  types.ts
frontend/src/lib/components/: BaseLink.svelte  FacetDistribution.svelte  FacetMap.svelte  (+2 more)
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
(+16 files in other folders)
