[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = "iReal backend app"
authors = ["King's Digital Lab"]
readme = "README.md"

[tool.poetry.scripts]
prepare = "app.utils.prepare_data:main"
cli = "cli:main"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
python-dotenv = "^1.0.0"
llama-index = "^0.10.59"
llama-index-embeddings-ollama = "^0.1.3"
llama-index-llms-ollama = "^0.2.2"
llama-index-vector-stores-qdrant = "^0.2.14"
qdrant-client = "^1.10.1"
llama-index-extractors-entity = "^0.1.3"
transformers = "4.40.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
ipython = "^8.26.0"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"